ingress/green-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: nginx-green
   namespace: blue-green
   labels:
      k8s: nginx-green
spec:
   strategy:
      rollingUpdate:
         maxSurge: 2
         maxUnavailable: 0
      type: RollingUpdate
   replicas: 5
   template:
      metadata:
         labels:
            app: nginx-green
      spec:
         containers:
         - image: luanngominh/nginx:green
           name: nginx-container
           ports:
           - containerPort: 80
           imagePullPolicy: Always
