ingress/green-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: greensvc
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: nginx-green
